# academy

./: .babelrc  .env.sample  .eslintrc  .eslintrc.js  .gitignore  README.md  index.html  package.json  webpack-dev-server.js  webpack.config.js
academy-lib/: .gitignore  README.md  academy-lib.cabal  stack.yaml
academy-lib/src/: HaskellAcademy.hs
academy-lib/src/HaskellAcademy/: IO.hs
api/: index.js
api/db/: index.js  lesson.js  progress.js  submission.js  user.js
api/resources/: lessons.js  users.js
app/: index.jsx  router.jsx  routes.jsx
app/actions/: LessonActions.jsx
app/api/: api.jsx  lessonApi.jsx
app/components/: CodeMirror.jsx  Editor.jsx  Lesson.jsx  LessonActionBar.jsx  Navbar.jsx  OutputWindow.jsx
app/components/pages/: Home.jsx  Learn.jsx  Lesson.jsx  LessonsOverview.jsx  Login.jsx  LoginFinish.jsx
app/containers/: Lesson.jsx  LessonActionBar.jsx  LessonFileEditor.jsx  LessonPage.jsx  LessonsOverviewPage.jsx  LoginFinishPage.jsx  LoginPage.jsx
app/models/: lesson.jsx
app/reducers/: app.jsx  lesson.jsx
app/reducers/pages/: lesson.jsx
config/: config.js  development.js  production.js  resolve.js
scss/: index.scss
scss/components/: editor.scss  lesson.scss  lessonActionBar.scss  lessonActions.scss  navbar.scss  outputWindow.scss
scss/partials/: _buttons.scss  _variables.scss
server/: index.js  resolve-env.js
server/api/: index.js
server/api/auth/: index.js
server/api/db/: index.js  lesson.js  progress.js  submission.js  user.js
server/api/resources/: lessons.js
server/web/: index.js
src/components/: CodeMirror.jsx  Editor.jsx  Lesson.jsx  LessonActions.jsx  Navbar.jsx  OutputWindow.jsx
src/components/pages/: Learn.jsx
src/models/: user.jsx
tests/models/: model.tests.jsx
