name:                academy-lib
version:             0.1.0.0
synopsis:            JavaScript FFI Library for Haskell Academy
description:         Please see README.md
homepage:            https://github.com/sunjay/academy#readme
license:             MIT
license-file:        LICENSE
author:              Sunjay Varma
maintainer:          varma.sunjay@gmail.com
copyright:           2016 Sunjay Varma
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HaskellAcademy
  other-modules:       HaskellAcademy.IO
  build-depends:       base >= 4.7 && < 5,
                       ghcjs-base,
                       ghcjs-prim
  default-language:    Haskell2010
  exposed:             True
  default-extensions:  NoImplicitPrelude
  ghc-options:         -O2 -Wall

executable submission
  hs-source-dirs:      submission
  main-is:             Main.hs
  other-modules:
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       academy-lib
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:         -O2 -Wall -package academy-lib

source-repository head
  type:     git
  location: https://github.com/githubuser/academy-lib
